--- a/index.html
+++ b/index.html
@@ -4,36 +4,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visionary AI</title>
+  <title>Zimam | زمام - AI Visionary</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+Arabic:wght@300;400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Noto+Sans+Arabic:wght@300;400;500;600;700;800;900&display=swap');
     
     body {
-      background-color: #0f0f0f;
+      background-color: #050505;
       color: #ffffff;
       font-family: 'Inter', 'Noto Sans Arabic', sans-serif;
+      overflow-x: hidden;
     }
 
     ::-webkit-scrollbar {
-      width: 8px;
+      width: 6px;
     }
     ::-webkit-scrollbar-track {
-      background: #1a1a1a;
+      background: #0a0a0a;
     }
     ::-webkit-scrollbar-thumb {
-      background: #333;
-      border-radius: 4px;
+      background: #222;
+      border-radius: 10px;
     }
     ::-webkit-scrollbar-thumb:hover {
-      background: #444;
+      background: #333;
     }
 
     .glass-morphism {
-      background: rgba(30, 30, 30, 0.7);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: rgba(15, 15, 15, 0.7);
+      backdrop-filter: blur(20px);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+    }
+
+    .gradient-text {
+      background: linear-gradient(to right, #d946ef, #8b5cf6);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     .animate-shake {
@@ -50,16 +57,31 @@
     [dir="rtl"] {
       font-family: 'Noto Sans Arabic', sans-serif;
     }
+
+    .columns-gallery {
+      column-count: 1;
+      column-gap: 1.5rem;
+    }
+    @media (min-width: 640px) { .columns-gallery { column-count: 2; } }
+    @media (min-width: 1024px) { .columns-gallery { column-count: 3; } }
+    @media (min-width: 1280px) { .columns-gallery { column-count: 4; } }
+
+    .gallery-item {
+      break-inside: avoid;
+      margin-bottom: 1.5rem;
+    }
   </style>
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "firebase/app": "https://esm.sh/firebase@11.1.0/app",
-    "firebase/auth": "https://esm.sh/firebase@11.1.0/auth",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
